--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 Mako==1.3.5
 MarkupSafe==2.1.5
+mysql-connector-python==9.0.0
 python-dotenv==1.0.1
 pytz==2024.1
 six==1.16.0
