--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 BACKEND_URL="http://localhost:5000"
-MYSQL_DATABASE="flask"
-MYSQL_USER="flask"
-MYSQL_PASSWORD="flask"
+DB_DATABASE="flask"
+DB_USER="flask"
+DB_PASSWORD="flask"
