migrationできない問題を解消しました。 (#13)
* test 壊れたmysql

* migrateされない問題の解消

* pythonのバージョンを3.10に変更

* 不要なモジュールの削除

* update migration

---------

Co-authored-by: KadoProG <splatrain@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
       context: .
       dockerfile: ./backend/Dockerfile
     environment:
-      DATABASE_URI: "mysql+mysqlconnector://${DB_USER}:${DB_PASSWORD}@db:3306/${DB_DATABASE}"
+      DATABASE_URI: "mysql+pymysql://${DB_USER}:${DB_PASSWORD}@mysql:3306/${DB_DATABASE}"
     ports:
       - "5000:5000"
     volumes:
