画像アップロードAPIを実装しました (#31)
* openapiにファイルアップロードAPI追加

* openapi修正

* 画像アップロードAPIの実装

* add uploads

--- a/.docs/koriyamaWebApp.yml
+++ b/.docs/koriyamaWebApp.yml
@@ -152,6 +152,35 @@ paths:
         required: true
         schema:
           type: integer
+  /api/v1/admin/upload/image:
+    post:
+      tags:
+        - admin
+      summary: 画像のアップロード
+      description: 画像のアップロードを行う
+      operationId: upload_image
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                filename:
+                  type: string
+                file:
+                  type: string
+                  format: binary
+                blog_id:
+                  type: string
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+      security:
+        - basicAuth: []
 components:
   securitySchemes:
     basicAuth:
