fix frontend and husky package (#34)
* fix frontend and husky package

* add sass

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "next": "14.2.4",
     "react": "^18",
-
     "react-dom": "^18"
   },
   "devDependencies": {
@@ -21,8 +20,8 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
-
-
+    "husky": "^9.1.4",
+    "sass": "^1.77.8",
     "typescript": "^5"
   }
 }
