--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - "./frontend:/var/www/html"
     working_dir: "/var/www/html"
     environment:
-      NEXT_PUBLIC_BACKEND_URL: "${BACKEND_URL}"
+      NEXT_PUBLIC_BACKEND_URL: http://backend:5000
     ports:
       - "3000:3000"
     command: bash -c "npm install && npm run dev"
