--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "prettier": "prettier --write .",
+    "check-types": "tsc --noEmit",
+    "generate:api": "npx openapi-typescript ../.docs/koriyamaWebApp.yml --output ./src/const/openapi.d.ts;",
     "prepare": "cd .. && husky"
   },
   "dependencies": {
@@ -21,6 +24,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "husky": "^9.1.4",
+    "prettier": "^3.3.3",
     "sass": "^1.77.8",
     "typescript": "^5"
   }
