--- a/default.conf
+++ b/default.conf
@@ -11,4 +11,8 @@ server {
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
     }
+
+    location /api {
+        proxy_pass http://backend:5000;
+    }
 }
