--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,15 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-zxing": "^2.0.2"
+    "react-slick": "^0.30.2",
+    "react-zxing": "^2.0.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "husky": "^9.1.4",
